2004-10-13  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/scripts/add-bevel.scm: two variables were
	not defined before first use (bug #153900).

2004-10-13  Kevin Cozens  <kcozens@cvs.gimp.org>

	* app/widgets/gimpactionview.c: Fixed a spelling error.

2004-10-13  DindinX  <dindinx@gimp.org>

	* plug-ins/common/colorify.c: Added a preview.

2004-10-13  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.c: removed trailing whitespace.

	* libgimpwidgets/gimpwidgets.def: added
	gimp_preview_set_default_cursor.

2004-10-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmessagedialog.c: improved handling of parent
	widget; probably just being paranoid here.

	* app/actions/image-commands.c
	* app/dialogs/image-new-dialog.c: ported memory size confirmation
	dialogs to GimpMessageDialog.

2004-10-13  DindinX  <dindinx@gimp.org>

	* libgimpwidgets/gimppreview.[ch]: added a new function to set the
	default cursor on preview: gimp_preview_set_default_cursor().

	* libgimpwidgets/gimpscrolledpreview.c: changed accordlingly.

	* plug-ins/common/flarefx.c:
	* plug-ins/common/nova.c: use this function.

	This addresses bug #90519.

2004-10-13  DindinX  <dindinx@gimp.org>

	* plug-ins/common/cubism.c: Added a preview and done some cleanups.

2004-10-13  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-commands.c
	* app/actions/templates-commands.c
	* app/actions/tool-options-commands.c: ported more boolean queries
	to GimpMessageDialog.

2004-10-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmessagedialog.c: handle parent widget not being
	a GtkWindow by calling gtk_widget_get_toplevel().

	* app/actions/data-commands.c
	* app/actions/edit-commands.c
	* app/actions/file-commands.c: ported more boolean queries to
	GimpMessageDialog.

2004-10-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpmessagedialog.[ch]: added a simple message
	dialog to avoid code duplication.
